src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_2.snap
---
source: src/parser/test.rs
description: "foo[1+"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected ']' not found."), (0,5)->(0,6)),
]

===================================

foo[1+
     ^ [Error] SyntaxError: Expected ']' not found.
